fix scrollbar move body issue

--- a/src/styles/utils/normalize.scss
+++ b/src/styles/utils/normalize.scss
@@ -5,6 +5,13 @@
 
 html {
   scroll-behavior: smooth;
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 body {
